2003-04-21  Andreas Kupries  <andreask@activestate.com>

	* optimize.test: Corrected errors in loading the functionality
	  under test, and of accessing tcltest. Now functional.

2003-04-18  Joe English  <jenglish@flightlab.com

	* optimize.man: fix minor markup errors that doctools and tmml 
	  were complaining about. 

2003-04-16  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl: Added math::statistics after yesterday's commit by
	  Arjen Markus.

	* statistics.test: Changed to conform to standard of importing
	  tcltest, changed import of tested functionality, added checks
	  that actually tcltest 1.2 or higher is used (Aborting if not).
	
	* statistics.tcl:
	* liststat.tcl
	* pdf_stat.tcl:
	* plotstat.tcl: Reformatted a bit to be more near to the
	  style-guide with regard to indentation.

2003-04-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl:
	* fuzzy.tcl: Committed new code (see #535216), this also updates
	  the package to version 0.2

	* fuzzy.man: 
	* fuzzy.test: New files for fuzzy comparisons, documentation and
	  testsuite. Fixed some bugs in them. NOTE: There are failures in
	  the testsuite.

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* combinatorics.man:
	* math.man:
	* math.tcl:
	* pkgIndex.tcl:  Set version of the package to to 1.2.2.

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* combinatorics.man: More semantic markup, less visual one.
	* calculus.man:

2002-06-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl: updated calculus to version 0.5.
	* calculus.man: Added [require] declarations.

	* calculus.README:
	* calculus.CHANGES:
	* calculus.tcl:
	* calculus.test:
	* calculus.man: Applied changes for #553773 on behalf of Arjen
	  Markus <arjenmarkus@users.sourceforge.net>.

2002-05-08  Don Porter <dgp@users.sourceforge.net>

	* calculus.test: Corrected testing problems by namespace-ifying
	the file.
